<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <EditText
            android:id="@+id/Email_log"
            android:layout_width="419dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="400dp"
            android:autofillHints=""
            android:background="#EADEDE"
            android:backgroundTint="#F4F1D1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <EditText
            android:id="@+id/Password_log"
            android:layout_width="419dp"
            android:layout_height="55dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="322dp"
            android:background="#FFE0E0"
            android:backgroundTint="#F4F1D1"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email_log"
            app:layout_constraintVertical_bias="0.041" />

        <Button
            android:id="@+id/Btn_log"
            android:layout_width="134dp"
            android:layout_height="46dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="280dp"
            android:background="#C87272"
            android:backgroundTint="#E3E1DD"
            android:text="@string/log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password_log"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="422dp"
            android:layout_height="61dp"
            android:layout_marginTop="227dp"
            android:layout_marginBottom="40dp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#090A0C"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Email_log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_init_sign"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="339dp"
            android:layout_height="36dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="200dp"
            android:text="@string/dont_have_account_sign_up"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Btn_log" />

</androidx.constraintlayout.widget.ConstraintLayout>

